exports[`test should render a default component 1`] = `
<div
  className="terraClinical-DetailList">
  <div
    className="terraClinical-DetailList-list" />
</div>
`;

exports[`test should render a list 1`] = `
<div
  className="terraClinical-DetailList">
  <div
    className="terraClinical-DetailList-list">
    <DetailListItem
      item={
        <p>
          Test
        </p>
      } />
    <DetailListItem
      item={
        <p>
          Test
        </p>
      } />
  </div>
</div>
`;

exports[`test should render a title 1`] = `
<div
  className="terraClinical-DetailList">
  <div
    className="terraClinical-DetailList-title">
    Title
  </div>
  <div
    className="terraClinical-DetailList-list" />
</div>
`;

exports[`test should render a title and a list 1`] = `
<div
  className="terraClinical-DetailList">
  <div
    className="terraClinical-DetailList-title">
    Title
  </div>
  <div
    className="terraClinical-DetailList-list">
    <DetailListItem
      item={
        <p>
          Test
        </p>
      } />
  </div>
</div>
`;
